# cldr-runner

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  MANUAL_SETUP.md  NAVIGATOR.md  NOTES.md  README.adoc  README.md  VERSION.txt  ansible.cfg  build.sh  common.sh  deps-ansible.yml  deps-python.txt  local_development.yml  pyproject.toml  rhel9-init-base.sh  rhel9-init.sh  run_project.sh  ubuntu-init-base.sh  ubuntu-init.sh  ubuntu20-init-base.sh
.github/workflows/: build_and_push_image.yml  build_push_image.yml  label_pr.yml  pre-commit.yml  publish.yml  publish_image.yml  publish_image_github_packages.yml  publish_images.yml  publish_matrix_images.yml  publish_single_image.yml  reset_pr.yml  validate_image.yml  validate_pr.yml
.local/: unidecode-hook.py
aws/: bindep.txt  execution-environment.yml  requirements.txt  requirements.yml
azure/: bindep.txt  execution-environment.yml  requirements.txt  requirements.yml
base/: bashrc  bindep.txt  execution-environment.yml  requirements.txt  requirements.yml
builder/: BUILDING.md  build.sh  ee-aws.yml  ee-azure.yml  ee-base.yml  ee-full.yml  ee-gcp.yml
builder/devel/: galaxy.yml  requirements.txt
builder/env/: envvars
builder/inventory/: hosts
builder/main/: galaxy.yml
builder/repo/: google-cloud-sdk.repo
env/: settings
full/: bindep.txt  execution-environment.yml  kubernetes.repo  requirements.txt  requirements.yml
gcp/: bindep.txt  execution-environment.yml  google-cloud-cli.repo  requirements.txt  requirements.yml
init-scripts/: centos7-init.sh
payload/: .bashrc  ansible.cfg  bashrc
payload/env/: envvars
