[project]
name = "cldr-runner"
description = "Ansible Execution Environments for Cloudera"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Webster Mudge", email = "wmudge@cloudera.com" },
]
classifiers = []
dependencies = []
dynamic = ["version"]

[tool.hatch.version]
path = "VERSION.txt"
scheme = "semver"
validate-bump = true

[tool.hatch.envs.default]
python = "3.12"
detached = true
dependencies = [
  "pre-commit",
  "unidecode",
  "coverage[toml]",
  "ansible-core<2.17", # For RHEL 8 support
  "ansible-builder",
]

[tool.hatch.envs.default.scripts]
lint = "pre-commit run -a"
build-local = [
  """
cd base;
ansible-builder create;
docker build \
  --no-cache \
  --progress=plain \
  --build-arg BUILD_VER=$(hatch version) \
  --build-arg BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ) \
  --build-arg BUILD_REVISION=$(git rev-parse HEAD) \
  -t localhost/cldr-runner:$(hatch version) \
  context/ 2>&1 | tee build.log;
cd ..;
echo "Local image: localhost/cldr-runner:$(hatch version)"
  """
]
build-publish = [
  """
cd base;
ansible-builder create;
_ARCH=${ARCH:-$(uname -m | sed 's/aarch64/arm64/;s/x86_64/amd64/')};
docker buildx build \
  --no-cache \
  --platform linux/${_ARCH} \
  --push \
  --build-arg BUILD_VER=$(hatch version) \
  --build-arg BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ) \
  --build-arg BUILD_REVISION=$(git rev-parse HEAD) \
  -t ghcr.io/cloudera-labs/cldr-runner:$(hatch version)-${_ARCH} \
  context/;
cd ..;
echo "Published: ghcr.io/cloudera-labs/cldr-runner:$(hatch version)-${_ARCH}"
  """
]
build-manifest = [
  """
docker buildx imagetools create \
  -t ghcr.io/cloudera-labs/cldr-runner:$(hatch version) \
  -t ghcr.io/cloudera-labs/cldr-runner:latest \
  ghcr.io/cloudera-labs/cldr-runner:$(hatch version)-amd64 \
  ghcr.io/cloudera-labs/cldr-runner:$(hatch version)-arm64;
echo "Manifest: ghcr.io/cloudera-labs/cldr-runner:$(hatch version)"
  """
]

[tool.hatch.envs.lint]
python = "3.12"
detached = true
extra-dependencies = [
  "ansible-lint",
]

[build-system]
requires = [
  "hatchling",
  "hatch-semver",
]
build-backend = "hatchling.build"
