[project]
name = "cldr-runner"
description = "Ansible Execution Environments for Cloudera"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Webster Mudge", email = "wmudge@cloudera.com" },
]
classifiers = []
dependencies = []
dynamic = ["version"]

[tool.hatch.version]
path = "VERSION.txt"
scheme = "semver"
validate-bump = true

[tool.hatch.envs.default]
python = "3.12"
detached = true
dependencies = [
  "pre-commit",
  "unidecode",
  "coverage[toml]",
  "ansible-core<2.17", # For RHEL 8 support
  "ansible-builder",
]

[tool.hatch.envs.default.scripts]
lint = "pre-commit run -a"
build = [
  """
podman manifest rm ghcr.io/cloudera-labs/cldr-runner-base:$(hatch version)
cd base;
ansible-builder build \
-t localhost/cldr-runner-base:$(hatch version) \
--extra-build-cli-args "--load --platform linux/amd64,linux/arm64 --manifest ghcr.io/cloudera-labs/cldr-runner-base:$(hatch version)" \
--no-cache \
--squash all;
cd ..;
echo "Image Manifest: ghcr.io/cloudera-labs/cldr-runner-base:$(hatch version)"
  """
]
build-local = [
  """
cd base;
ansible-builder create;
docker build \
  --no-cache \
  --progress=plain \
  --build-arg BUILD_VER=$(hatch version) \
  --build-arg BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ) \
  --build-arg BUILD_REVISION=$(git rev-parse HEAD) \
  -t localhost/cldr-runner-base:$(hatch version) \
  context/ 2>&1 | tee build.log;
cd ..;
echo "Local image: localhost/cldr-runner-base:$(hatch version)"
  """
]

[tool.hatch.envs.lint]
python = "3.12"
detached = true
extra-dependencies = [
  "ansible-lint",
]

[build-system]
requires = [
  "hatchling",
  "hatch-semver",
]
build-backend = "hatchling.build"
